test/static/reject/ndarray.pyi
import numpy as np
import numpy.typing as npt

AR_f8: npt.NDArray[np.float64]

###

AR_f8.dtype = np.bool  # type: ignore[assignment, misc]  # pyright: ignore[reportAttributeAccessIssue]
